# krank-studio

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  version.properties
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  custom-toolchain.cmake  engine.cpp  engine.cpp.bak  engine.h  engine.h.bak  jni_bridge.cpp  termux-android-toolchain.cmake
app/src/main/cpp/effects/: ampsim.cpp  ampsim.h  chorus.cpp  chorus.h  compressor.h  delay.cpp  delay.h  distortion.cpp  distortion.h  effect.h  eq.cpp  eq.h  looper.cpp  looper.h  metronome.cpp  metronome.h  midi_exporter.cpp  midi_exporter.h  noise_gate.h  reverb.cpp  reverb.h  tablature.h  tone_matcher.cpp  tone_matcher.h  transcriber.cpp  transcriber.h  tuner.cpp  tuner.h
app/src/main/cpp/oboe/: CMakeLists.txt
app/src/main/java/com/kaonixx/guitarix/: App.kt  BleScanner.kt  GuitarEngine.kt  MainActivity.kt  MainViewModel.kt  MicRecorder.kt  SystemAudioCapture.kt  WavLoader.kt
app/src/main/java/com/kaonixx/guitarix/ui/: EffectsScreen.kt  MainScreen.kt  Theme.kt
app/src/main/java/com/kaosnet/krank/: App.kt  BleScanner.kt  Gp5Exporter.kt  Gp5Importer.kt  KrankEngine.kt  MainActivity.kt  MainViewModel.kt  MicRecorder.kt  SystemAudioCapture.kt  TabImporter.kt  TabPlayer.kt  WavLoader.kt
app/src/main/java/com/kaosnet/krank/ui/: EffectsScreen.kt  MainScreen.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_fg.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
design-concepts/: index.html
marketing/: index.html
(+6 files in other folders)
